[gd_scene load_steps=11 format=3 uid="uid://b617v2lvyypgt"]

[ext_resource type="Script" uid="uid://deunkmdh446m7" path="res://Menu.gd" id="1_1"]
[ext_resource type="Texture2D" uid="uid://d36hicdnigt5q" path="res://menu_background.png" id="1_2"]
[ext_resource type="Texture2D" uid="uid://8pjffmotxf4" path="res://shop_png.png" id="1_3"]
[ext_resource type="Texture2D" uid="uid://bx8dgh2li3y2v" path="res://achievement_png.png" id="1_4"]
[ext_resource type="Texture2D" uid="uid://casey52k2xi0w" path="res://highscore_png.png" id="1_5"]
[ext_resource type="Texture2D" uid="uid://c6vh8fltgwc3m" path="res://profile_png.png" id="1_6"]
[ext_resource type="Texture2D" uid="uid://b5v7b15megebo" path="res://settings_png.png" id="1_7"]
[ext_resource type="Texture2D" uid="uid://bhw8pjs0q8pw6" path="res://noads_png.png" id="1_8"]
[ext_resource type="Texture2D" uid="uid://dl7xmhwtfn2b5" path="res://taptoplay.png" id="1_9"]

[sub_resource type="FontFile" id="DynamicFont_1"]
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2")
expand_mode = 1
stretch_mode = 5

[node name="TapToPlayContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="TapToPlayImage" type="TextureRect" parent="TapToPlayContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_9")
expand_mode = 1
stretch_mode = 5

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("DynamicFont_1")
theme_override_font_sizes/font_size = 36
text = "High Score: 0"

[node name="TopRightButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 360.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = -40

[node name="SettingsButton" type="Control" parent="TopRightButtons"]
custom_minimum_size = Vector2(225, 225)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="TopRightButtons/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7")
expand_mode = 1
stretch_mode = 5

[node name="NoAdsButton" type="Control" parent="TopRightButtons"]
custom_minimum_size = Vector2(225, 225)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="TopRightButtons/NoAdsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8")
expand_mode = 1
stretch_mode = 5

[node name="BottomButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -280.0
offset_right = 600.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -35
alignment = 1

[node name="ProfileButton" type="Control" parent="BottomButtons"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="BottomButtons/ProfileButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6")
expand_mode = 1
stretch_mode = 5

[node name="ShopButton" type="Control" parent="BottomButtons"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="BottomButtons/ShopButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3")
expand_mode = 1
stretch_mode = 5

[node name="AchievementButton" type="Control" parent="BottomButtons"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="BottomButtons/AchievementButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4")
expand_mode = 1
stretch_mode = 5

[node name="HighScoreButton" type="Control" parent="BottomButtons"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="BottomButtons/HighScoreButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5")
expand_mode = 1
stretch_mode = 5
